    transformation. (Thanks to Patrick Hurst for writing decode).

  [ Anders Kaseorg ]
  * Fix a quoting bug that failed to disallow transformation of generated
    conffiles.  (Patch from Evan Broder.)
  * Remove DEB_UNDIVERT_VERSION_file and DEB_UNREMOVE_VERSION_file, and
    instead test for the undiverted file in the postinst.  (Patch from
    Evan Broder.)

 -- Anders Kaseorg <andersk@mit.edu>  Sat, 06 Nov 2010 19:02:52 -0400

config-package-dev (4.11) unstable; urgency=low

  * Fix marking transform scripts as executable when
    DEB_TRANSFORM_SCRIPT_package is used.

 -- Tim Abbott <tabbott@mit.edu>  Sat, 05 Sep 2009 11:46:54 -0400

config-package-dev (4.10) unstable; urgency=low

  * Mark transform scripts as executable before attempting to execute them
    (Closes: #528995).

 -- Tim Abbott <tabbott@mit.edu>  Sun, 02 Aug 2009 19:48:33 -0400

config-package-dev (4.9) unstable; urgency=low

  [ Tim Abbott ]
  * Fix destdir handling for multiple binary packages in
    DEB_TRANSFORM_FILES (Closes: #510355).
  * Add Anders Kaseorg to Uploaders.

  [ Anders Kaseorg ]
  * Use set -e in multi-statement Makefile commands.

 -- Tim Abbott <tabbott@mit.edu>  Wed, 31 Dec 2008 16:39:44 -0500

config-package-dev (4.8) unstable; urgency=low

  * Add additional documentation to the makefile fragments
  * Add doc/ directory with pointer to online documentation
  * Add examples/ directory (Closes: #486130).
  * Rename configures- to diverts- as the prefix for the virtual packages
    that cause packages diverting the same file to conflict, since that is
    clearer.

 -- Tim Abbott <tabbott@mit.edu>  Sun, 13 Jul 2008 01:54:48 -0400

config-package-dev (4.7) unstable; urgency=low

  * Move homepage field to source package section, so it works.
  * Make DEB_TRANSFROM_FILES targets depend on common-build-arch and
    common-build-indep, so it works with architecture-dependent packages.
  * Remove useless clean code from transform-files.mk.